--- a/src/app/twitch/twitch-chat/twitch-chat-input/twitch-chat-input.component.scss
+++ b/src/app/twitch/twitch-chat/twitch-chat-input/twitch-chat-input.component.scss
@@ -8,7 +8,7 @@
   }
 
   background: $chat-input-background-color;
-  color: $chat-input-color;
+  color: $chat-color-input;
 
   border: $border-chat;
 }
