--- a/src/app/twitch/twitch.component.scss
+++ b/src/app/twitch/twitch.component.scss
@@ -1,9 +1,3 @@
-@import "../../variables";
-
-.chat-header {
-  background: $primary-chat-color;
-  border: $border-primary;
-
-  border-bottom: none;
-  border-top: none;
+.twitch-container {
+  height: 100%;
 }
