feat: Add selector for twitch channels (add button is still a mock)

--- a/src/app/twitch/twitch-chat/twitch-chat.component.scss
+++ b/src/app/twitch/twitch-chat/twitch-chat.component.scss
@@ -2,10 +2,8 @@
 
 .chat-header {
   background: $chat-color-primary;
-  border: $border-primary;
-
-  border-bottom: none;
-  border-top: none;
+  border: none;
+  border-bottom: $border-primary;
 
   padding-top: .5rem;
   padding-bottom: .5rem;
@@ -15,9 +13,6 @@
 
 .chat-container {
   background-color: $chat-color-primary;
-  border: rgba(255, 255, 255, 0.1) 1px solid;
-  overflow-x: hidden;
-  overflow-y: scroll;
 
   padding-left: 0;
   padding-right: 0;
