--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 /* You can add global styles to this file, and also import other style files */
 html, body {
   background: $primary-background-color;
-  color: #efeff1;
+  color: $chat-color-input;
 
   margin: 0;
   padding: 0;
