--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,6 +4,7 @@ $primary-background-color: #0e0e10;
 
 // Color schemas (brand colors)
 $color-nights: #41145F;
+$twitch-purple: #9146FF;
 
 // Chat colors
 $chat-color-primary: #18181b;
