--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,8 @@ html, body {
   margin: 0;
   padding: 0;
 
-  height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+
+  height: 100%;
+  max-height: 100%;
 }
