--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,12 +6,21 @@ $primary-background-color: #0e0e10;
 $color-nights: #41145F;
 $twitch-purple: #9146FF;
 
+// Chat font
+$chat-font-size: .9rem;
+
 // Chat colors
 $chat-color-primary: #18181b;
 $chat-color-input: #efeff1;
 $chat-color-highlight-self: #ff00004d;
 $chat-color-alternating: color.adjust($color-nights, $alpha: -.7);
 $chat-input-background-color: #fff3;
+
+// Link colors
+$chat-link-normal: #a970ff;
+$chat-link-hover: $chat-link-normal;
+$chat-link-hover-background: hsla(0, 0%, 100%, 0.2);
+$chat-link-hover-background-radius: 0.4rem;
 
 // Border
 $border-primary-color: rgba(255, 255, 255, 0.1);
