--- a/src/app/twitch/twitch-chat/twitch-chat-input/twitch-chat-input.component.scss
+++ b/src/app/twitch/twitch-chat/twitch-chat-input/twitch-chat-input.component.scss
@@ -1,5 +1,9 @@
 @import "../../../../variables";
 
+.chat-input-wrapper {
+  position: relative;
+}
+
 .chat-input {
   &:focus {
     background: #000;
@@ -7,8 +11,25 @@
     outline: 0;
   }
 
+  &::placeholder {
+    color: rgba($chat-color-input, .7);
+  }
+
   background: $chat-input-background-color;
   color: $chat-color-input;
 
   border: $border-chat;
+
+  padding: .5rem 5rem .5rem 3.8rem;
+
+  resize: none;
+}
+
+.twitch-chat-button-panel {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+
+  padding-bottom: .5rem;
+  padding-right: .5rem;
 }
