--- a/src/app/twitch/twitch-chat/twitch-chat-selector/twitch-chat-selector.component.scss
+++ b/src/app/twitch/twitch-chat/twitch-chat-selector/twitch-chat-selector.component.scss
@@ -4,7 +4,7 @@
 .chat-selector-tabs {
   .nav-tabs {
     .nav-item {
-      .nav-link {
+      .channel-selector-link.nav-link {
         &.active {
           &:first-child {
             border-radius: 0 0 0 0;
@@ -15,6 +15,7 @@
         }
 
         color: $chat-color-input;
+        cursor: pointer;
 
         border-color: $border-primary-color;
         border-bottom: $border-primary-color;
