--- a/src/app/twitch/twitch-chat/twitch-chat-input/twitch-chat-input.component.scss
+++ b/src/app/twitch/twitch-chat/twitch-chat-input/twitch-chat-input.component.scss
@@ -15,6 +15,11 @@
     color: rgba($chat-color-input, .7);
   }
 
+  &:disabled {
+    cursor: not-allowed;
+    pointer-events: all !important;
+  }
+
   background: $chat-input-background-color;
   color: $chat-color-input;
 
