--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,7 @@
 @use "sass:color";
 
 $primary-background-color: #0e0e10;
+$secondary-background-color: rgb(24, 24, 27);
 
 // Color schemas (brand colors)
 $color-nights: #41145F;
