feat: Implement NgRx store for emotes
[WIP] Processes emote-sets after login and shows them in emote menu.

--- a/src/app/twitch/twitch-chat/twitch-chat-emote-menu/twitch-chat-emote-menu-list/twitch-chat-emote-menu-list.component.scss
+++ b/src/app/twitch/twitch-chat/twitch-chat-emote-menu/twitch-chat-emote-menu-list/twitch-chat-emote-menu-list.component.scss
@@ -44,3 +44,13 @@
   padding-left: 1rem;
   padding-top: 1rem;
 }
+
+.emote-menu-list.d-flex {
+  .emote-menu-list-emotes {
+
+  }
+
+  .emote-menu-list-channels {
+
+  }
+}
