--- a/src/app/twitch/twitch-chat/twitch-chat.component.scss
+++ b/src/app/twitch/twitch-chat/twitch-chat.component.scss
@@ -14,7 +14,7 @@
 .chat-container {
   background-color: $chat-color-primary;
 
-  height: 0px;
+  height: 0;
   font-size: 1.3rem;
 
   padding-left: 0;
