feat(emotes): Dunno what I did here last time feat(timestamp): Implemented timestamps per message

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,6 +2,7 @@
 
 $primary-background-color: #0e0e10;
 $secondary-background-color: rgb(24, 24, 27);
+$alternative-background-color-2: rgb(38,38, 44);
 
 // Color schemas (brand colors)
 $color-nights: #41145F;
