--- a/src/app/twitch/twitch-chat/twitch-chat-message/twitch-chat-message.component.scss
+++ b/src/app/twitch/twitch-chat/twitch-chat-message/twitch-chat-message.component.scss
@@ -10,6 +10,10 @@
     background-color: $chat-color-alternating;
   }
 
+  .chat-message-timestamp {
+    color: color.adjust($chat-color-primary, $lightness: 50%);
+  }
+
   .chat-message-channel {
     color: color.adjust($chat-color-primary, $lightness: 50%);
   }
